# strange-ctest-problem

./: CMakeLists.txt  CTestConfig.cmake  CTestScript.cmake  CTestScriptBad.cmake  CTestScriptGood.cmake  Config.h.in  README.md  mylib.cpp  mylib.h  mytest.cpp  mytest.h
model/: CMakeLists.txt  Structure.cpp  Structure.h
model/tests/: CMakeLists.txt
